removed all references to mock planets, added css to no longer overlap

--- a/app/planet-detail.component.css
+++ b/app/planet-detail.component.css
@@ -33,11 +33,15 @@ button:disabled {
   padding-bottom: 20px;
 }
 [class*='col-']:last-of-type {
+  width: 10%;
   padding-right: 10px;
 }
 .col-1-4 {
   width: 25%;
 }
-.col-3-4 {
-  width: 65%;
+.col-2-4 {
+  width: 50%;
+}
+.container {
+  height: 20em;
 }
